# rattish-c

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
dev/: builder.sh  deployer.sh  index.js  installer.sh  tester.sh
include/: _config.h  command_matrix.h  memory_unit.h  processor_module.h  script_loader.h
src/: _index.c  command_matrix.c  memory_unit.c  processor_module.c  script_loader.c
